# Realtr

./: .gitattributes  .gitignore  .prettierignore  .prettierrc  .stylelintignore  AGENTS.md  CLAUDE.md  DESIGN_TRANSFORMATION_SUMMARY.md  IMAGE_DISPLAY_STANDARD.md  README.md  UI_UX_IMPROVEMENTS_SUMMARY.md  WATERMARK_FEATURE_COMPLETE.md  WATERMARK_INTEGRATION_GUIDE.md  WATERMARK_SETTINGS_UI.md  build-with-opencv.bat  check-opencv.bat  delete-db.ps1  eslint.config.js  package-lock.json  package.json  stylelintrc.json  svelte.config.js  vite.config.js  watermark-ui-section.svelte
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
docs/: AUTO_STRAIGHTEN_ALGORITHM.md
scripts/: setup-opencv.ps1  version.js
src/: app.css  app.html
src-tauri/: 2  Cargo.toml  clippy.toml  rustfml.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/opencv/: .gitignore  README.md
src-tauri/src/: config.rs  database.rs  error.rs  fast_resize.rs  folder_conventions.rs  gpu.rs  image_editor.rs  main.rs  opencv_setup.rs  paths.rs  property.rs  turbo.rs
src-tauri/src/database/: cities.rs  editor.rs  migrations.rs  repair.rs  scan.rs  sets.rs  test_support.rs  thumbnails.rs  types.rs  watermark.rs
src-tauri/src/perspective/: commands.rs  detection.rs  mod.rs  model.rs  preprocessing.rs  rectification.rs  straighten.rs  vanishing.rs
src-tauri/src/shaders/: adjustments.wgsl  bilateral.wgsl  clahe.wgsl  gradient_histogram.wgsl  rotation.wgsl  undistort.wgsl  watermark.wgsl
src/lib/components/: AddPropertyModal.svelte  BatchEnhanceModal.svelte  BeforeAfterSlider.svelte  ConfirmDialog.svelte  CropOverlay.svelte  CustomTitleBar.svelte  EditPropertyModal.svelte  EditorTitleBar.svelte  ImageEditorModal.svelte  ImageGrid.svelte  ImageTile.svelte  LazyImage.svelte  Notification.svelte  NotificationPortal.svelte  OpenCVSetupModal.svelte  (+6 more)
src/routes/: +layout.svelte  +page.svelte
~/.tauri/: myapp.key.pub
(+39 files in other folders)
