[package]
name = "tauri-app"
version = "0.1.64-beta"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["rustls-tls"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "^2.0.0"
base64 = "0.21"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
image = { version = "0.25", features = ["png", "jpeg", "gif", "webp", "bmp"] }
rayon = "1.10"
nalgebra = "0.33"
imageproc = "0.25"
opener = "0.7"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
walkdir = "2"
tauri-plugin-updater = "^2.0.0"
tauri-plugin-process = "^2.0.0"

# Perspective correction and auto-straighten (requires OpenCV installed)
opencv = { version = "0.92", default-features = false, features = ["imgproc", "imgcodecs"] }
rand = "0.8"

# EXIF metadata reading for lens distortion correction
kamadak-exif = "0.5"

[lints.rust]
unsafe_code = "forbid"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"

[lints.clippy]
enum_glob_use = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
